# EDIT-VIDEO-PRO-

./: .gitignore  BUILD.md  CMakeLists.txt  COMPILACION.md  COMPILAR.bat  COMPILAR_FINAL.bat  COMPILAR_LIMPIO.bat  COMPILAR_SIMPLE.bat  DESPLOY.bat  FilmoraEditor.pro  FilmoraEditor_Demo.bat  FilmoraEditor_Demo.ps1  INICIAR.bat  MEJORAS_PROFESIONALES.md  README.md  ROADMAP.md  compile.bat  compile.sh  filmora_editor.py  main.js  mcp.json  package.json  preload.js  renderer.js  resources.qrc  run.bat  run.sh
core/examples/: simple_pipeline.cpp
core/src/: connection.cpp  connection.h  node.cpp  node.h  node_graph.cpp  node_graph.h
core/src/nodes/: blur_effect.cpp  blur_effect.h  readnode.cpp  readnode.h  writenode.cpp  writenode.h
docs/: ARCHITECTURE.md  INSTALLATION.md  NODE_API.md  architecture.md  build.md  node-dev.md
python/api/: __init__.py  node.py
python/examples/: simple_workflow.py
src/: audiomanager.cpp  audiomanager.h  colorgradingmanager.cpp  colorgradingmanager.h  database.cpp  database.h  effectsmanager.cpp  effectsmanager.h  exportmanager.cpp  exportmanager.h  imagemanager.cpp  imagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  paymentmanager.cpp  paymentmanager.h  subscriptionmanager.cpp  subscriptionmanager.h  titlesmanager.cpp  titlesmanager.h  videoeditor.cpp  videoeditor.h  videotimeline.cpp  videotimeline.h
src/core/: FrameBuffer.h  Node.h  NodeGraph.h  write_node.cpp  write_node.h
src/core/graph/: node_graph.cpp  node_graph.h
src/core/nodes/: blur_node.cpp  blur_node.h  channel_mix_node.cpp  channel_mix_node.h  colorspace_node.cpp  colorspace_node.h  curves_node.cpp  curves_node.h  exposure_node.cpp  exposure_node.h  grade_node.cpp  grade_node.h  hue_saturation_node.cpp  hue_saturation_node.h  keyer_node.cpp  keyer_node.h  levels_node.cpp  levels_node.h  merge_node.cpp  merge_node.h  node_base.cpp  node_base.h  node_connection.cpp  node_connection.h  roto_node.cpp  roto_node.h  tracker_node.cpp  tracker_node.h  transform_node.cpp  transform_node.h  viewer_node.cpp  viewer_node.h
src/nodes/: MergeNode.h  ReadNode.h  WriteNode.h
src/ui/: CMakeLists.txt  MainWindow.h  NodeGraphWidget.h  ViewerWidget.h  main_window.cpp  main_window.h
src/ui/panels/: media_panel.cpp  media_panel.h  node_graph_panel.cpp  node_graph_panel.h  properties_panel.cpp  properties_panel.h  timeline_panel.cpp  timeline_panel.h  viewer_panel.cpp  viewer_panel.h
src/ui/theme/: dark_theme.cpp  dark_theme.h
